--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /back/tmp
 /tmp
 /back/main
-back/cmd/code-radar-embed/build
-back/cmd/code-radar-embed/*.svg
-back/cmd/code-radar-embed/*.html
-back/cmd/code-radar-embed/*.css
+/back/cmd/code-radar-embed/build
+/back/cmd/code-radar-embed/*.svg
+/back/cmd/code-radar-embed/*.html
+/back/cmd/code-radar-embed/*.css
+/target
